HWC/k8s-template-beta-prod-hwc/template-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: [SERVICE_NAME]
  labels:
    virtual-kubelet.io/burst-to-cci: '[SERVERLESS]' #change to 'enforce' to swith to CCI
  annotations:
    secret.reloader.stakater.com/reload: env-[SERVICE_NAME]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: [SERVICE_NAME]
  template:
    metadata:
      labels:
        app: [SERVICE_NAME]
    spec:
      containers:
        - name: [SERVICE_NAME]
          image: swr.ap-southeast-4.myhuaweicloud.com/rctiplus/[ENV]-[SERVICE_NAME]-0
          ports:
            - containerPort: [PORT]
          resources:
            limits:
              cpu: "[CPU_LIMIT]"
              memory: "[MEM_LIMIT]"
      imagePullSecrets:
        - name: regcred

---

kind: Service
apiVersion: v1
metadata:
  name: [ENV]-[SERVICE_NAME]-service 
spec:
  selector:
    app: [SERVICE_NAME]
  ports:
  - protocol: TCP
    port: 443
    targetPort: [PORT]
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: [SERVICE_NAME]-ingress
  annotations:
    kubernetes.io/elb.id: "[ELB_ID]"
    kubernetes.io/elb.class: performance
    kubernetes.io/elb.ip: "[ELB_IP]"
    kubernetes.io/elb.port: "443"
    kubernetes.io/elb.tls-certificate-ids: [CERT_TLS]
spec:
  tls: 
  - secretName: ingress-secret-ssl-rctiplusid 
  rules: 
  - host: '[DNS_NAME]'
    http: 
      paths: 
      - path: '/'
        backend: 
          service:
            name: [ENV]-[SERVICE_NAME]-service
            port: 
              number: 443
        property:
          ingress.beta.kubernetes.io/url-match-mode: STARTS_WITH
        pathType: ImplementationSpecific
  ingressClassName: cce
